@@ -12,6 +12,7 @@
 	- Fixed: "Hi-Res" was not prepended to the names of 48/ primitives.
 	- Fixed: Checking the Hi-Res option would not allow segment values over 16.
 	- Added support for multiple spaces before the ring number.
+- Added new action "Add History Line" for quickly inserting 0 !HISTORY lines to headers
 - Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction from errorneous MLCAD
 	syntax ('0 BFC CERTIFY CLIP').
 - If the vertex snapper finds a vertex closer than 4 pixels, it likely is the vertex being looked for
